<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="horizontal"
    tools:context=".activities.SignUpActivity">

    <LinearLayout
        android:layout_gravity="center_vertical"
        android:orientation="vertical"
        android:layout_weight="1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/signUpFirstName"
            android:inputType="textCapWords|textPersonName"
            android:hint="@string/signUpFirstName"
            android:allowUndo="true"
            android:cursorVisible="true"
            android:layout_gravity="center_vertical|center_horizontal"/>

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/signUpLastName"
            android:inputType="textCapWords|textPersonName"
            android:hint="@string/signUpLastName"
            android:layout_gravity="center_vertical|center_horizontal"/>

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/signUpEmailAddress"
            android:inputType="textEmailAddress"
            android:hint="@string/signUpEmailAddress"
            android:layout_gravity="center_vertical|center_horizontal"/>

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/signUpMobileNumber"
            android:inputType="number"
            android:hint="@string/signUpMobileNumber"
            android:layout_gravity="center_vertical|center_horizontal"/>

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/signUpPassword"
            android:inputType="textPassword"
            android:hint="@string/signUpPassword"
            android:imeOptions="actionDone"
            android:layout_gravity="center_vertical|center_horizontal"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/buttonSignUp"
            android:id="@+id/buttonSignUp"
            android:layout_gravity="center_vertical|center_horizontal"/>
        </LinearLayout>
</LinearLayout>
